# linear_act_controller

./: .gitignore
Board/: linear_act_controller.kicad_pcb  linear_act_controller.kicad_prl  linear_act_controller.kicad_pro  linear_act_controller.kicad_sch  power.kicad_sch  uC.kicad_sch
software/: Cargo.toml  memory.x  upload.sh
software/src/: main.rs
